--- a/white-sand-ui/resources/META-INF/plugin.xml
+++ b/white-sand-ui/resources/META-INF/plugin.xml
@@ -2,7 +2,7 @@
   <id>com.your.company.unique.plugin.id</id>
   <name>Plugin display name here</name>
   <version>1.0</version>
-  <vendor email="support@yourcompany.com" url="http://www.yourcompany.com">YourCompany</vendor>
+  <vendor email="" url="github.com/mswift42">YourCompany</vendor>
 
   <description><![CDATA[
       Enter short description for your plugin here.<br>
