--- a/reykjavik/resources/META-INF/plugin.xml
+++ b/reykjavik/resources/META-INF/plugin.xml
@@ -1,11 +1,14 @@
 <idea-plugin>
   <id>Reykjavik</id>
   <name>Reykjavik</name>
-  <version>1.0</version>
+  <version>0.1</version>
   <vendor email="martin.haesler@gmail.com" url="github.com/mswift42">mswift42</vendor>
 
   <description><![CDATA[
       Custom dark theme for Intellij editors, fits perfectly with reykjavik editor theme.
+
+      <img src="https://raw.githubusercontent.com/mswift42/ith/master/screenshots/reykjavik.png" border="0" width="700" />
+      <img src="https://raw.githubusercontent.com/mswift42/ith/master/screenshots/reykjavic-rs.png border="0" width="700" />
     ]]></description>
 
   <change-notes><![CDATA[
@@ -19,9 +22,7 @@
 
   <!-- please see http://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/plugin_compatibility.html
        on how to target different products -->
-  <!-- uncomment to enable plugin in all products
   <depends>com.intellij.modules.lang</depends>
-  -->
 
   <extensions defaultExtensionNs="com.intellij">
     <!-- Add your extensions here -->
