--- a/reykjavik/resources/META-INF/plugin.xml
+++ b/reykjavik/resources/META-INF/plugin.xml
@@ -1,19 +1,19 @@
 <idea-plugin>
   <id>Reykjavik</id>
   <name>Reykjavik</name>
-  <version>0.1</version>
+  <version>0.1.1</version>
   <vendor email="martin.haesler@gmail.com" url="github.com/mswift42">mswift42</vendor>
 
   <description><![CDATA[
       Custom dark theme for Intellij editors, fits perfectly with reykjavik editor theme.
 
       <img src="https://raw.githubusercontent.com/mswift42/ith/master/screenshots/reykjavik.png" border="0" width="700" />
-      <img src="https://raw.githubusercontent.com/mswift42/ith/master/screenshots/reykjavic-rs.png border="0" width="700" />
+      <img src="https://raw.githubusercontent.com/mswift42/ith/master/screenshots/reykjavik-rs.png" border="0" width="700" />
     ]]></description>
 
   <change-notes><![CDATA[
   Initial release of this plugin.
-  Included reykjavik editor scheme.
+  Fix spelling of reykjavik-rs screenshot.
     ]]>
   </change-notes>
 
