--- a/white-sand-ui/resources/META-INF/plugin.xml
+++ b/white-sand-ui/resources/META-INF/plugin.xml
@@ -1,11 +1,11 @@
 <idea-plugin>
   <id>white-sand-ui</id>
   <name>white-sand-ui</name>
-  <version>1.0</version>
-  <vendor email="martin.haesler@gmail.com" url="github.com/mswift42">github.com/mswift42</vendor>
+  <version>0.1</version>
+  <vendor email="martin.haesler@gmail.com" url="github.com/mswift42">mswift42</vendor>
 
   <description><![CDATA[
-      Custom Ui light ui theme for 2019.1 Intellij Editors.
+      Custom light ui theme for 2019.1 Intellij Editors.
     ]]></description>
 
   <change-notes><![CDATA[
@@ -19,9 +19,7 @@
 
   <!-- please see http://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/plugin_compatibility.html
        on how to target different products -->
-  <!-- uncomment to enable plugin in all products
   <depends>com.intellij.modules.lang</depends>
-  -->
 
   <extensions defaultExtensionNs="com.intellij">
     <!-- Add your extensions here -->
