--- a/silkworm/resources/META-INF/plugin.xml
+++ b/silkworm/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin>
   <id>silkworm</id>
   <name>silkworm</name>
-  <version>1.0.4</version>
+  <version>1.0.5</version>
   <vendor email="martin.haesler@gmail.com" url="github.com/mswift42">mswift42</vendor>
 
   <description><![CDATA[
@@ -10,7 +10,8 @@
     ]]></description>
 
   <change-notes><![CDATA[
-  Add module dependency tag, to target all products.
+  Improve DIFF colours.
+  Fix Dart constructor.
     ]]>
   </change-notes>
 
