--- a/reykjavik/resources/META-INF/plugin.xml
+++ b/reykjavik/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin>
   <id>Reykjavik</id>
   <name>Reykjavik</name>
-  <version>0.1.1</version>
+  <version>0.1.2</version>
   <vendor email="martin.haesler@gmail.com" url="github.com/mswift42">mswift42</vendor>
 
   <description><![CDATA[
@@ -12,8 +12,7 @@
     ]]></description>
 
   <change-notes><![CDATA[
-  Initial release of this plugin.
-  Fix spelling of reykjavik-rs screenshot.
+  Darken Icons > Object.Red. set selected bg / fg colours.
     ]]>
   </change-notes>
 
