--- a/metalheart/resources/META-INF/plugin.xml
+++ b/metalheart/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin>
   <id>MetalHeart</id>
   <name>MetalHeart</name>
-  <version>0.1</version>
+  <version>0.1.1</version>
   <vendor email="martin.haesler@gmail.com" url="github.com/mswift42">mswift42</vendor>
 
   <description><![CDATA[
@@ -9,8 +9,7 @@
     ]]></description>
 
   <change-notes><![CDATA[
-  Initial release of this plugin.
-  Added metalheart xml theme.
+  Set colours for selectedForeground / Background.
     ]]>
   </change-notes>
 
