--- a/white-sand-ui/resources/META-INF/plugin.xml
+++ b/white-sand-ui/resources/META-INF/plugin.xml
@@ -1,11 +1,11 @@
 <idea-plugin>
   <id>white-sand-ui</id>
   <name>white-sand-ui</name>
-  <version>0.2</version>
+  <version>0.2.1</version>
   <vendor email="martin.haesler@gmail.com" url="github.com/mswift42">mswift42</vendor>
 
   <description><![CDATA[
-      Custom light ui theme for 2019.1 Intellij Editors.
+      set selectionbackground / foreground color.
     ]]></description>
 
   <change-notes><![CDATA[
