--- a/foggy-night/resources/META-INF/plugin.xml
+++ b/foggy-night/resources/META-INF/plugin.xml
@@ -1,8 +1,8 @@
 <idea-plugin>
   <id>foggy-night</id>
   <name>foggy-night</name>
-  <version>0.1</version>
-  <vendor email="martin.haesler@gmail.com" url="github.com/mswift42">mswift42</vendor>
+  <version>0.1.1</version>
+  <vendor email="martin.haesler@gmail.com" url="https://github.com/mswift42">mswift42</vendor>
 
   <description><![CDATA[
   Custom dark ui theme with muted colors, made to fit with the foggy-night
@@ -10,13 +10,13 @@
     ]]></description>
 
   <change-notes><![CDATA[
-  Initial release of this plugin.
-  Added foggy-night editor scheme.
+  Specify minimmum idea-version.
+  update vendor url.
     ]]>
   </change-notes>
 
   <!-- please see http://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/build_number_ranges.html for description -->
-  <idea-version since-build="173.0"/>
+  <idea-version since-build="191"/>
 
   <!-- please see http://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/plugin_compatibility.html
        on how to target different products -->
