--- a/reykjavik/resources/META-INF/plugin.xml
+++ b/reykjavik/resources/META-INF/plugin.xml
@@ -1,8 +1,8 @@
 <idea-plugin>
   <id>Reykjavik</id>
   <name>Reykjavik</name>
-  <version>0.1.2</version>
-  <vendor email="martin.haesler@gmail.com" url="github.com/mswift42">mswift42</vendor>
+  <version>0.1.4</version>
+  <vendor email="martin.haesler@gmail.com" url="https://github.com/mswift42">mswift42</vendor>
 
   <description><![CDATA[
       Custom dark theme for Intellij editors, fits perfectly with reykjavik editor theme.
@@ -12,12 +12,13 @@
     ]]></description>
 
   <change-notes><![CDATA[
-  Darken Icons > Object.Red. set selected bg / fg colours.
+  update vendor url.
+  specify minimum idea version.
     ]]>
   </change-notes>
 
   <!-- please see http://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/build_number_ranges.html for description -->
-  <idea-version since-build="173.0"/>
+  <idea-version since-build="191"/>
 
   <!-- please see http://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/plugin_compatibility.html
        on how to target different products -->
