--- a/silkworm/resources/META-INF/plugin.xml
+++ b/silkworm/resources/META-INF/plugin.xml
@@ -1,8 +1,8 @@
 <idea-plugin>
   <id>silkworm</id>
   <name>silkworm</name>
-  <version>1.0.5</version>
-  <vendor email="martin.haesler@gmail.com" url="github.com/mswift42">mswift42</vendor>
+  <version>1.0.6</version>
+  <vendor email="martin.haesler@gmail.com" url="https://github.com/mswift42">mswift42</vendor>
 
   <description><![CDATA[
     Custum light ui theme fitting for silkworm editor theme.
@@ -10,13 +10,13 @@
     ]]></description>
 
   <change-notes><![CDATA[
-  Improve DIFF colours.
-  Fix Dart constructor.
+  Specify idea-version.
+  update vendor url.
     ]]>
   </change-notes>
 
   <!-- please see http://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/build_number_ranges.html for description -->
-  <idea-version since-build="173.0"/>
+  <idea-version since-build="191"/>
 
   <!-- please see http://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/plugin_compatibility.html
        on how to target different products -->
