--- a/madrid/resources/META-INF/plugin.xml
+++ b/madrid/resources/META-INF/plugin.xml
@@ -1,21 +1,21 @@
 <idea-plugin>
   <id>madrid</id>
   <name>madrid</name>
-  <version>0.1</version>
-  <vendor email="martin.haesler@gmail.com" url="github.com/mswift42">mswift42</vendor>
+  <version>0.1.1</version>
+  <vendor email="martin.haesler@gmail.com" url="https://github.com/mswift42">mswift42</vendor>
 
   <description><![CDATA[
   custom dark ui theme for the madrid color scheme.
     ]]></description>
 
   <change-notes><![CDATA[
-  Initial release of this plugin.
-  Includes the madrid xml editor file.
+  set minimum idea version.
+  fix vendor url.
     ]]>
   </change-notes>
 
   <!-- please see http://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/build_number_ranges.html for description -->
-  <idea-version since-build="173.0"/>
+  <idea-version since-build="191"/>
 
   <!-- please see http://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/plugin_compatibility.html
        on how to target different products -->
