--- a/white-sand-ui/resources/META-INF/plugin.xml
+++ b/white-sand-ui/resources/META-INF/plugin.xml
@@ -1,20 +1,21 @@
 <idea-plugin>
   <id>white-sand-ui</id>
   <name>white-sand-ui</name>
-  <version>0.2.1</version>
-  <vendor email="martin.haesler@gmail.com" url="github.com/mswift42">mswift42</vendor>
+  <version>0.2.2</version>
+  <vendor email="martin.haesler@gmail.com" url="https://github.com/mswift42">mswift42</vendor>
 
   <description><![CDATA[
       set selectionbackground / foreground color.
     ]]></description>
 
   <change-notes><![CDATA[
-  Improve DIFF colours. fix Dart_constructor entry.
+  Specify minimum idea version.
+  Fix vendor url.
     ]]>
   </change-notes>
 
   <!-- please see http://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/build_number_ranges.html for description -->
-  <idea-version since-build="173.0"/>
+  <idea-version since-build="191"/>
 
   <!-- please see http://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/plugin_compatibility.html
        on how to target different products -->
