--- a/white-sand-ui/resources/META-INF/plugin.xml
+++ b/white-sand-ui/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin>
   <id>white-sand-ui</id>
   <name>white-sand-ui</name>
-  <version>0.2.2</version>
+  <version>0.2.3</version>
   <vendor email="martin.haesler@gmail.com" url="https://github.com/mswift42">mswift42</vendor>
 
   <description><![CDATA[
@@ -9,8 +9,8 @@
     ]]></description>
 
   <change-notes><![CDATA[
-  Specify minimum idea version.
-  Fix vendor url.
+  Improve Completion Popup colours.
+  Set match selection fg colour to black.
     ]]>
   </change-notes>
 
