improve completion popup colors.

--- a/madrid/resources/META-INF/plugin.xml
+++ b/madrid/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin>
   <id>madrid</id>
   <name>madrid</name>
-  <version>0.1.1</version>
+  <version>0.1.2</version>
   <vendor email="martin.haesler@gmail.com" url="https://github.com/mswift42">mswift42</vendor>
 
   <description><![CDATA[
@@ -9,8 +9,8 @@
     ]]></description>
 
   <change-notes><![CDATA[
-  set minimum idea version.
-  fix vendor url.
+  Improve Completion Popup colors.
+  set selectionmatch fg to white.
     ]]>
   </change-notes>
 
