--- a/warm-night/resources/META-INF/plugin.xml
+++ b/warm-night/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin>
   <id>warm-night</id>
   <name>warm-night</name>
-  <version>0.1.1</version>
+  <version>0.1.2</version>
   <vendor email="martin.haesler@gmail.com" url="https://github.com/mswift42">mswift42</vendor>
 
   <description><![CDATA[
@@ -9,8 +9,8 @@
     ]]></description>
 
   <change-notes><![CDATA[
-  Set minimum idea-version.
-  fix vendor url.
+  Improve Completion Popup colors.
+  add selectionactive/inactive fg colors.
     ]]>
   </change-notes>
 
