--- a/metalheart/resources/META-INF/plugin.xml
+++ b/metalheart/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin>
   <id>MetalHeart</id>
   <name>MetalHeart</name>
-  <version>0.1.2</version>
+  <version>0.1.3</version>
   <vendor email="martin.haesler@gmail.com" url="https://github.com/mswift42">mswift42</vendor>
 
   <description><![CDATA[
@@ -9,8 +9,8 @@
     ]]></description>
 
   <change-notes><![CDATA[
-  set minimum idea version.
-  fix vendor url.
+  Improve Completion popup colors.
+  Add selectionInactive color.
     ]]>
   </change-notes>
 
