--- a/reykjavik/resources/META-INF/plugin.xml
+++ b/reykjavik/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin>
   <id>Reykjavik</id>
   <name>Reykjavik</name>
-  <version>0.1.4</version>
+  <version>0.1.5</version>
   <vendor email="martin.haesler@gmail.com" url="https://github.com/mswift42">mswift42</vendor>
 
   <description><![CDATA[
@@ -12,8 +12,7 @@
     ]]></description>
 
   <change-notes><![CDATA[
-  update vendor url.
-  specify minimum idea version.
+  Improve completion popup colors. set matchselection fg to white.
     ]]>
   </change-notes>
 
