--- a/madrid/resources/META-INF/plugin.xml
+++ b/madrid/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin>
   <id>madrid</id>
   <name>madrid</name>
-  <version>0.1.2</version>
+  <version>0.1.3</version>
   <vendor email="martin.haesler@gmail.com" url="https://github.com/mswift42">mswift42</vendor>
 
   <description><![CDATA[
@@ -9,8 +9,7 @@
     ]]></description>
 
   <change-notes><![CDATA[
-  Improve Completion Popup colors.
-  set selectionmatch fg to white.
+    Set Table stripeColor to colour #101010.
     ]]>
   </change-notes>
 
