--- a/reykjavik/resources/META-INF/plugin.xml
+++ b/reykjavik/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin>
   <id>Reykjavik</id>
   <name>Reykjavik</name>
-  <version>0.1.5</version>
+  <version>0.1.6</version>
   <vendor email="martin.haesler@gmail.com" url="https://github.com/mswift42">mswift42</vendor>
 
   <description><![CDATA[
@@ -12,7 +12,8 @@
     ]]></description>
 
   <change-notes><![CDATA[
-  Improve completion popup colors. set matchselection fg to white.
+  Change Table stripedColor to color #060d0f.
+  Change FileColor yellow to #231b1a.
     ]]>
   </change-notes>
 
