set filecolor yellow to 1b1d13.

--- a/reykjavik/resources/META-INF/plugin.xml
+++ b/reykjavik/resources/META-INF/plugin.xml
@@ -13,7 +13,7 @@
 
   <change-notes><![CDATA[
   Change Table stripedColor to color #060d0f.
-  Change FileColor yellow to #231b1a.
+  Change FileColor yellow to #1b1d13.
     ]]>
   </change-notes>
 
