set Filecolor yellow to #2f2b22.

--- a/warm-night/resources/META-INF/plugin.xml
+++ b/warm-night/resources/META-INF/plugin.xml
@@ -10,6 +10,7 @@
 
   <change-notes><![CDATA[
     change Table stripeColor to colour #131111.
+    Set Filecolor yellow to #2f2b22.
     ]]>
   </change-notes>
 
