--- a/soft-charcoal/resources/META-INF/plugin.xml
+++ b/soft-charcoal/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin>
   <id>soft-charcoal</id>
   <name>soft-charcoal</name>
-  <version>0.1.3</version>
+  <version>0.1.4</version>
   <vendor email="martin.haesler@gmail.com" url="https://github.com/mswift42">mswift42</vendor>
 
   <description><![CDATA[
@@ -9,7 +9,7 @@
     ]]></description>
 
   <change-notes><![CDATA[
-  Improve Table striped color by setting it to #121212.
+   CompletionPopup "selectionBackground" color set to "#3e3e3e".
     ]]>
   </change-notes>
 
