--- a/thursday/resources/META-INF/plugin.xml
+++ b/thursday/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin>
   <id>Thursday</id>
   <name>Thursday</name>
-  <version>0.1.2</version>
+  <version>0.1.3</version>
   <vendor email="martin.haesler@gmail.com" url="https://github.com/mswift42">mswift42</vendor>
 
   <description><![CDATA[
@@ -9,8 +9,8 @@
     ]]></description>
 
   <change-notes><![CDATA[
-  Improve Completion popup colors.
-  Add selectionInactive color.
+    Fix Completion popup colors.
+    Set "DOCUMENTATION_COLOR" to bg color.
     ]]>
   </change-notes>
 
