--- a/reykjavik/resources/META-INF/plugin.xml
+++ b/reykjavik/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin>
   <id>Reykjavik</id>
   <name>Reykjavik</name>
-  <version>0.1.7</version>
+  <version>0.1.8</version>
   <vendor email="martin.haesler@gmail.com" url="https://github.com/mswift42">mswift42</vendor>
 
   <description><![CDATA[
@@ -12,7 +12,8 @@
     ]]></description>
 
   <change-notes><![CDATA[
-     CompletionPopup "selectionBackground" color set to "#243549".
+     Add DOCUMENTATION_COLOR entry to editor scheme.
+     remove deprecated completion popup entries.
     ]]>
   </change-notes>
 
