--- a/silkworm/resources/META-INF/plugin.xml
+++ b/silkworm/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin>
   <id>silkworm</id>
   <name>silkworm</name>
-  <version>1.0.8</version>
+  <version>1.0.9</version>
   <vendor email="martin.haesler@gmail.com" url="https://github.com/mswift42">mswift42</vendor>
 
   <description><![CDATA[
@@ -10,7 +10,7 @@
     ]]></description>
 
   <change-notes><![CDATA[
-  Fix CompletionPopup colors. Add DOCUMENTATION_COLOR entry in editor scheme.
+  Fix SELECTION_BACKGROUND / SELECTION_FOREGROUND colors.
     ]]>
   </change-notes>
 
