--- a/foggy-night/resources/META-INF/plugin.xml
+++ b/foggy-night/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin>
   <id>foggy-night</id>
   <name>foggy-night</name>
-  <version>0.1.5</version>
+  <version>0.1.6</version>
   <vendor email="martin.haesler@gmail.com" url="https://github.com/mswift42">mswift42</vendor>
 
   <description><![CDATA[
@@ -10,8 +10,7 @@
     ]]></description>
 
   <change-notes><![CDATA[
-     Add DOCUMENTATION_COLOR entry to editor scheme.
-     Improve Completion.popup colors.
+    Improve SELECTION_BACKGROUND / SELECTION_FOREGROUND colors.
     ]]>
   </change-notes>
 
