--- a/thursday/resources/META-INF/plugin.xml
+++ b/thursday/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin>
   <id>Thursday</id>
   <name>Thursday</name>
-  <version>0.1.4</version>
+  <version>0.1.5</version>
   <vendor email="martin.haesler@gmail.com" url="https://github.com/mswift42">mswift42</vendor>
 
   <description><![CDATA[
@@ -9,7 +9,8 @@
     ]]></description>
 
   <change-notes><![CDATA[
-    Improve SELECTION_BACKGROUND / SELECTION_FOREGROUND colors.
+    Brighten 'FileColor.Green',
+    Brighten background color 'DIFF_MODIFIED'.
     ]]>
   </change-notes>
 
